Synchronize, now output .dat file weight

--- a/.classpath
+++ b/.classpath
@@ -4,7 +4,7 @@
 	<classpathentry kind="src" path="robots"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="D:/robocode/libs/robocode.jar" sourcepath="">
+	<classpathentry kind="lib" path="D:/robocode/libs/robocode.jar" sourcepath="D:/robocode/libs/robocode.jar">
 		<attributes>
 			<attribute name="javadoc_location" value="file:/D:/robocode/javadoc/"/>
 		</attributes>
